kubernetes/argocd/01-ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: uriart.sytes.net
    http:
      paths:
      - path: /argo-cd
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port: 
              number: 443
  tls:
  - hosts:
    - uriart.sytes.net
    secretName: cert-tls
